[package]
name = "ruplicity"
version = "0.1.0"
authors = ["mbrt"]
description = "Browse duplicity backups"
repository = "https://github.com/mbrt/ruplicity"
readme = "README.md"
license = "MIT"
keywords = ["duplicity", "backup"]

[features]
default = []
unstable = ["clippy"]

[dependencies]
flate2 = "0.2"
tar = { git = "https://github.com/alexcrichton/tar-rs.git" }
regex = "0.1"
try_opt = "0.1"
time = "0.1"
byteorder = "0.4"

# optional, working only on nightly
clippy = { version = "*", optional = true }

[dev-dependencies]
lazy_static = "0.1"
