[package]
name = "ruplicity"
version = "0.2.2"
authors = ["Michele Bertasi <@brt_device>"]
description = "Library to read duplicity backups"
repository = "https://github.com/mbrt/ruplicity"
documentation = "http://mbrt.github.io/ruplicity"
readme = "README.md"
license = "MIT"
keywords = ["duplicity", "backup"]

[features]
default = []
lints = ["clippy", "nightly"]
nightly = [] # for building with nightly and unstable features
unstable = ["lints", "nightly"] # for building with travis-cargo

[dependencies]
flate2 = "0.2"
tar = "0.4.4"
regex = "0.1"
try_opt = "0.1"
time = "0.1"
byteorder = "0.4"
tabwriter = "0.1"
clippy = { version = "*", optional = true }
