[package]
name = "ruplicity"
version = "0.2.2"
authors = ["Michele Bertasi <@brt_device>"]
edition = "2018"
description = "Library to read duplicity backups"
repository = "https://github.com/mbrt/ruplicity"
documentation = "http://mbrt.github.io/ruplicity"
readme = "README.md"
license = "MIT"
keywords = ["duplicity", "backup"]

[features]
default = []
lints = ["clippy", "nightly"]
nightly = [] # for building with nightly and unstable features
unstable = ["lints", "nightly"] # for building with travis-cargo

[dependencies]
flate2 = "1.0"
tar = "0.4.4"
regex = "1.3"
time = "0.1"
byteorder = "1.3"
tabwriter = "1.2"
clippy = { version = "*", optional = true }
